Update title in Real_time_FaceDetection notebook

--- a/computer-vision/Real_time_FaceDetection.ipynb
+++ b/computer-vision/Real_time_FaceDetection.ipynb
@@ -5,9 +5,9 @@
    "id": "926399f1-63e7-4f51-985d-b475980b3860",
    "metadata": {},
    "source": [
-    "# Assignment 3"
+    "## Face Detection using OpenCV (Haar Cascade)"
    ]
-  },
+  }
   {
    "cell_type": "code",
    "execution_count": 1,
