--- a/computer-vision/Real_time_FaceDetection.ipynb
+++ b/computer-vision/Real_time_FaceDetection.ipynb
@@ -5,7 +5,7 @@
    "id": "926399f1-63e7-4f51-985d-b475980b3860",
    "metadata": {},
    "source": [
-    "## Face Detection using OpenCV (Haar Cascade)"
+   "# Face Detection using OpenCV (Haar Cascade)"
    ]
   }
   {
